# turing_machine

./: CMakeLists.txt  main.cc
models/: turing_machine.cc  turing_machine.h
